--- a/wear/app/src/main/AndroidManifest.xml
+++ b/wear/app/src/main/AndroidManifest.xml
@@ -24,8 +24,10 @@
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
 
+        <service android:name="com.dsphoenix.core.notification.ActiveRunService"/>
+
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:taskAffinity=""
             android:theme="@style/MainActivityTheme.Starting">
