--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -43,6 +43,8 @@ composeMaterialWearOs = "1.0.0-alpha20"
 health = "1.0.0-rc02"
 play-services-wearable = "18.1.0"
 wear = "1.3.0"
+google-services = "4.4.2"
+firebase-bom = "33.1.2"
 
 # Project versions
 projectApplicationId = "com.dsphoenix.runique"
@@ -111,6 +113,7 @@ androidx-wear-compose-ui-tooling = { group = "androidx.wear.compose", name = "co
 play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "play-services-wearable" }
 androidx-health-services-client = { group = "androidx.health", name = "health-services-client", version.ref = "health" }
 androidx-wear = { group = "androidx.wear", name = "wear", version.ref = "wear" }
+google-firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase-bom"}
 
 # Gradle
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
@@ -131,6 +134,7 @@ room = { id = "androidx.room", version.ref = "room" }
 org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "org-jetbrains-kotlin-jvm" }
 androidDynamicFeature = { id = "com.android.dynamic-feature", version.ref = "agp" }
 mapsplatform-secrets-plugin = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secretsPlugin"}
+google-services-plugin = { id = "com.google.gms.google-services", version.ref = "google-services"}
 
 runique-android-application = { id = "runique.android.application", version = "unspecified"}
 runique-android-application-compose = { id = "runique.android.application.compose", version = "unspecified"}
