--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -114,6 +114,7 @@ play-services-wearable = { group = "com.google.android.gms", name = "play-servic
 androidx-health-services-client = { group = "androidx.health", name = "health-services-client", version.ref = "health" }
 androidx-wear = { group = "androidx.wear", name = "wear", version.ref = "wear" }
 google-firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase-bom"}
+google-firebase-auth = { group = "com.google.firebase", name = "firebase-auth"}
 
 # Gradle
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
