--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -116,6 +116,7 @@ androidx-wear = { group = "androidx.wear", name = "wear", version.ref = "wear" }
 google-firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase-bom"}
 google-firebase-auth = { group = "com.google.firebase", name = "firebase-auth"}
 google-firebase-firestore = {group = "com.google.firebase", name = "firebase-firestore"}
+google-firebase-storage = { group = "com.google.firebase", name = "firebase-storage"}
 
 # Gradle
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
