--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -117,6 +117,7 @@ google-firebase-bom = { group = "com.google.firebase", name = "firebase-bom", ve
 google-firebase-auth = { group = "com.google.firebase", name = "firebase-auth"}
 google-firebase-firestore = {group = "com.google.firebase", name = "firebase-firestore"}
 google-firebase-storage = { group = "com.google.firebase", name = "firebase-storage"}
+google-firebase-appcheck-debug = { group = "com.google.firebase", name = "firebase-appcheck-debug"}
 
 # Gradle
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
