--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -44,11 +44,11 @@ firebase-bom = "33.1.2"
 
 # Project versions
 projectApplicationId = "com.dsphoenix.runique"
-projectVersionName = "1.0.1"
+projectVersionName = "1.0.4"
 projectMinSdkVersion = "25"
 projectTargetSdkVersion = "34"
 projectCompileSdkVersion = "34"
-projectVersionCode = "2"
+projectVersionCode = "5"
 navigationRuntimeKtx = "2.7.7"
 wearToolingPreview = "1.0.0"
 
@@ -106,6 +106,7 @@ google-firebase-auth = { group = "com.google.firebase", name = "firebase-auth"}
 google-firebase-firestore = {group = "com.google.firebase", name = "firebase-firestore"}
 google-firebase-storage = { group = "com.google.firebase", name = "firebase-storage"}
 google-firebase-appcheck-debug = { group = "com.google.firebase", name = "firebase-appcheck-debug"}
+google-firebase-appcheck-playintegrity = { group = "com.google.firebase", name = "firebase-appcheck-playintegrity"}
 
 # Gradle
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
